can reproduce the hotreloading issues from ddnet
but why does it work in

https://github.com/ChillerDragon/teeworlds/tree/chiller_simple_hotreload

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = datasrc/maps
 	url = https://github.com/teeworlds/teeworlds-maps.git
 	branch = master
+[submodule "src/external/TeeworldsBotLib"]
+	path = src/external/TeeworldsBotLib
+	url = git@github.com:TeeworldsBotLib/TeeworldsBotLib.git
